trying to remove nav.pagination

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -118,7 +118,7 @@
   }
 
   /* next/previous buttons */
-  /*&--pager {
+  &--pager {
     display: block;
     padding: 1em 2em;
     float: left;
